Fix navbar z-index 🐛
Se arregló el error de la navbar y el carrusel de imágenes.

--- a/src/public/styles/main.css
+++ b/src/public/styles/main.css
@@ -414,7 +414,62 @@ template {
   color: white;
 }
 
-/*Empty file*/
+nav {
+  height: 60px;
+  background-color: #000000;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0px 32px;
+  font-size: 16px;
+}
+
+nav .nav__brand {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 16px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: white;
+  text-decoration: none;
+  cursor: pointer;
+  font-weight: bolder;
+}
+
+nav .nav__logo {
+  max-width: 50px;
+}
+
+nav .nav__toggle {
+  color: white;
+  background-color: #FF8800;
+  display: none;
+  padding: 0.8em;
+  border-radius: 8px;
+}
+
+nav .nav__navigation {
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 12px;
+}
+
+nav .nav__navigation a {
+  text-decoration: none;
+  color: white;
+  font-weight: 300;
+}
+
 /*Hero container*/
 /* Why section*/
 /*Plans carrousel*/
@@ -480,65 +535,6 @@ template {
   font-weight: lighter;
 }
 
-nav {
-  height: 60px;
-  background-color: #000000;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  padding: 0px 32px;
-  font-size: 16px;
-}
-
-nav .nav__brand {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  gap: 16px;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  color: white;
-  text-decoration: none;
-  cursor: pointer;
-  font-weight: bolder;
-}
-
-nav .nav__logo {
-  max-width: 50px;
-}
-
-nav .nav__toggle {
-  color: white;
-  background-color: #FF8800;
-  display: none;
-  padding: 0.8em;
-  border-radius: 8px;
-}
-
-nav .nav__navigation {
-  list-style: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  gap: 12px;
-}
-
-nav .nav__navigation a {
-  text-decoration: none;
-  color: white;
-  font-weight: 300;
-}
-
-/*Hero container*/
-/* Why section*/
-/*Plans carrousel*/
 body {
   font-family: "Roboto", sans-serif;
   background: #FAFAFA;
@@ -566,6 +562,7 @@ body {
         -ms-flex-direction: column;
             flex-direction: column;
     overflow-y: auto;
+    z-index: 2;
     background-color: #FF8800;
     line-height: 36px;
     margin: 0px;
